cli/tests/snapshots/cli__repl_error_assert.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Type mismatch
  ┌─ <repl>:1:13
  │
1 │ assert 1 == "a"
  │             ^^^

Expected type:

    Int

Found type:

    String
