cli/tests/snapshots/cli__repl_error_const.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Type mismatch
  ┌─ /src/repl1_1.gleam:1:16
  │
1 │ const x: Int = "a"
  │                ^^^

Expected type:

    Int

Found type:

    String
