cli/tests/snapshots/cli__repl_error_fn_body.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Type mismatch
  ┌─ /src/repl1_1.gleam:1:15
  │
1 │ fn f(a) { a + "x" }
  │               ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    String

Hint: Strings can be joined using the `<>` operator.
