cli/tests/snapshots/cli__repl_error_fn_head_with_stored_value.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Unknown type
  ┌─ <repl>:1:9
  │
1 │ fn f(x: Nope) { x + z }
  │         ^^^^

The type `Nope` is not defined or imported in this module.
