cli/tests/snapshots/cli__repl_error_import_item.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Unknown module value
  ┌─ /src/repl1_1.gleam:1:19
  │
1 │ import gleam/int.{nope}
  │                   ^^^^

The module `gleam/int` does not have a `nope` value.
