cli/tests/snapshots/cli__repl_error_let_pattern.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Type mismatch
  ┌─ /src/repl1_1.gleam:1:12
  │
1 │ let assert Ok(v) = 1
  │            ^^^^^

Expected type:

    Int

Found type:

    Result(b, c)
