cli/tests/snapshots/cli__repl_error_multiline_fn.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Unknown variable
  ┌─ <repl>:3:15
  │
3 │   x + z + a + nope
  │               ^^^^

The name `nope` is not in scope here.
